Type check publication controllers
